--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html>
 <head>
 <title>lifelike</title>
-<link rel="stylesheet" type="test/css" href="mocha.css"  />
+<!--<link rel="stylesheet" type="test/css" href="mocha.css"  /> not for now-->
 <link rel="stylesheet" type="text/css" href="lifelike.css" />
 </head>
 <body onload="drawGridLines()">
 <h1>Lifelike: Conway's Game of Life and Variants</h1>
 <p>Click cells to switch from alive to dead and vice versa. Step advances one iteration; run/stop advances at two iterations per second.</p>
-<canvas id="fieldOfLife" width="601" height="371" onclick="processClickOnCanvas(lifeAtRowCol, event)" onmousemove="getCanvasCoordinates(event)">Your browser does not support the HTML5 canvas tag.</canvas>
+<canvas id="fieldOfLife" width="601" height="371" onclick="processClickOnCanvas(lifeAtRowCol, event)">Your browser does not support the HTML5 canvas tag.</canvas>
 <input type="button" value="Run">
 <input type="button" value="Step" onclick="iterateNextGen(lifeAtRowCol)">
-<input type="button" value="Step">
 <input type="button" value="Reset">
-<!--<p id="xy"></p> //how do you do testing for browser events
-<div id="mocha"></div>
+<!--<p id="xy"></p>-->
+<!--<div id="mocha"></div> how do you do testing for browser stuff?
 <script src="mocha.js"></script>
 <script src="chai.js"></script>
 <script>
