Added Reset functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <canvas id="fieldOfLife" width="601" height="371" onclick="processClickOnCanvas(lifeAtRowCol, event)">Your browser does not support the HTML5 canvas tag.</canvas>
 <input type="button" value="Run">
 <input type="button" value="Step" onclick="iterateNextGen(lifeAtRowCol)">
-<input type="button" value="Reset">
+<input type="button" value="Reset" onclick="killEverything(lifeAtRowCol)">
 <!--<p id="xy"></p>-->
 <!--<div id="mocha"></div> how do you do testing for browser stuff?
 <script src="mocha.js"></script>
