Implement run/stop functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Lifelike: Conway's Game of Life and Variants</h1>
 <p>Click cells to switch from alive to dead and vice versa. Step advances one iteration; run/stop advances at two iterations per second.</p>
 <canvas id="fieldOfLife" width="601" height="371" onclick="processClickOnCanvas(lifeAtRowCol, event)">Your browser does not support the HTML5 canvas tag.</canvas>
-<input type="button" value="Run">
+<input type="button" id = "runStop" value="Run" onclick="runOrStop(lifeAtRowCol)">
 <input type="button" value="Step" onclick="iterateNextGen(lifeAtRowCol)">
 <input type="button" value="Reset" onclick="killEverything(lifeAtRowCol)">
 <!--<p id="xy"></p>-->
