Split ui and logic, create module exports conditional, run ESLint

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <script>
   mocha.run();
 </script>-->
-<script src="lifelike.js"></script>
-
+<script src="app/lifelike-ui.js"></script>
+<script src="app/lifelike-logic.js"></script>
 </body>
 </html>
